# S2Engine

./: CMakeLists.txt  README.md
S2Engine/include/Core/: Singleton.h
S2Engine/include/Logger/: FileLog.h  Logger.h
S2Engine/include/Manager/: EnvironmentManager.h  LoggerManager.h  MemoryManager.h
S2Engine/include/Memory/: Memory.h  StackAllocator.h
S2Engine/source/Entry/: CMakeLists.txt  main.cpp
S2Engine/source/Logger/: FileLog.cpp  Logger.cpp
S2Engine/source/Manager/: EnvironmentManager.cpp  LoggerManager.cpp  MemoryManager.cpp
S2Engine/source/Memory/: Memory.cpp  StackAllocator.cpp
TODO/: inCode.txt
